<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#272425"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:layout_margin="10dp"
        android:textColor="#272425"
        android:background="#f1d2c4"
        android:text="@string/fromA_button" />

    <Button
        android:layout_margin="10dp"
        android:textColor="#272425"
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:background="#f1d2c4"
        android:text="@string/fromB_button" />

    <Button
        android:layout_margin="10dp"
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:textColor="#272425"
        android:background="#f1d2c4"
        android:text="@string/fromC_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"

        android:orientation="vertical">

        <Button
            android:layout_margin="10dp"
            android:textColor="#272425"
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="#f1d2c4"
            android:text="@string/fromD_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <Button
            android:layout_margin="10dp"
            android:textColor="#272425"
            android:id="@+id/button18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:onClick="goBack"
            android:background="#f1d2c4"
            android:text="Tilbage til Rejsevalg" />
    </LinearLayout>
</LinearLayout>